task1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloapp
  template:
    metadata:
      labels:
        app: helloapp
    spec:
      containers:
      - name: helloapp
        image: helloapp
        ports:
          - name: web
            containerPort: 80
        livenessProbe:
          httpGet:
            port: 80
            path: /
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            port: 80
            path: /health
          initialDelaySeconds: 15
          periodSeconds: 5
