task1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloapp-service
spec:
  selector:
    app: helloapp
  ports:
  - protocol: TCP
    port: 9000
    targetPort: web
  type: NodePort
