task1/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: sa.homework
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          serviceName: helloapp-service
          servicePort: 9000
      - path: /kbtu/(.*)
        pathType: Prefix
        backend:
          serviceName: helloapp-service
          servicePort: 9000
  - host: api.sa.homework
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          serviceName: helloapp-service
          servicePort: 9000
      - path: /kbtu/(.*)
        pathType: Prefix
        backend:
          serviceName: helloapp-service
          servicePort: 9000
